508 - fixed taxonomy tree badge contrast. (Jazz: 564560)     * 508 - added title to search "Search In" field to explain that changing the field changes other options. (Jazz: 564540)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,6 +99,11 @@ body.komet_dashboard, body.komet_dashboard .ui-widget, body.komet_dashboard .ui-
     z-index: 11;
 }
 
+// bootstrap Overrides
+.badge {
+    background-color: #595959;
+}
+
 // KOMET Login styles
 .external.login{
     background-color: #eef1f3;
